--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -1,1 +1,1 @@
-.scheduler .pager{display:inline}.scheduler .pager .previous,.scheduler .pager .next{min-width:80px}
+.scheduler .pager{display:inline}.scheduler .pager .previous,.scheduler .pager .next{min-width:80px}.messages .title,.messages .from{text-align:center}.messages .read-button{text-align:center}
