--- a/public/stylesheets/app.less
+++ b/public/stylesheets/app.less
@@ -6,3 +6,12 @@
 .scheduler .pager .next{
   min-width: 80px;
 }
+
+.messages .title,
+.messages .from{
+  text-align: center;
+}
+
+.messages .read-button{
+  text-align: center;
+}
